# peach-web

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  Trunk.toml  index.html  input.css  sw.js
.cargo-husky/hooks/: pre-commit
.claude/: settings.json
.github/workflows/: ci.yml
_bmad/_config/: agent-manifest.csv  files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/arc42-documentation-architect/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
docs/: arc42-architecture.md  future-work.md  ios-corrections.md  peach-web-ux-spec.md  pre-existing-findings.adversarial-review-2025-03-25.md  pre-existing-findings.md  project-context.md
docs/claude-audit/: 01edb1cce8.md  024764ad6e.md  06b929a4a5.md  06c22e08c3.md  0719c2dfa8.md  07bc6b046a.md  08b5646609.md  0920ec367b.md  0b69ded365.md  0b913e4c79.md  0d0fa6a085.md  0d385b785c.md  0d852a3c83.md  0ed57372a8.md  0ee6dfae01.md  0ff658f75b.md  12894a905b.md  162bc1e620.md  184b81a590.md  195784f8bc.md  1b444a5634.md  1c27a20c6f.md  1e4850b0bb.md  2000e90ff5.md  264e817a3c.md  27e46a4e2d.md  2a39406918.md  2adeb52835.md  2b4395e3df.md  2ceff046cb.md  2dd061a552.md  2e834dad19.md  316e5f9c7e.md  353bb05b1b.md  3740a0593d.md  3a19c86477.md  3cfe282b2b.md  45bddcd56c.md  46a9ce50d2.md  4755ec521b.md  (+104 more)
docs/implementation-artifacts/: 1-1-project-scaffold.md  1-10-code-quality-review.md  1-2-domain-value-types-and-tuning-system.md  1-3-perceptual-profile-and-adaptive-algorithm.md  1-4-app-shell-and-routing.md  1-5-audio-engine-oscillator.md  1-6-comparison-session-state-machine.md  1-7-comparison-training-ui.md  1-8-persistence-and-profile-hydration.md  1-9-interruption-handling.md  10-1-ci-quality-gate.md  10-2-build-and-deploy-to-github-pages.md  11-1-ui-consistency-and-sound-level.md  11-2-headline-layout-and-modal-consistency.md  12-1-progress-data-pipeline.md  12-2-profile-screen-layout-and-chart-cards.md  12-3-chart-rendering.md  12-4-chart-scrolling.md  13-1-chart-tap-annotation.md  13-2-profile-help-overlay.md  (+88 more)
domain/: Cargo.toml
domain/src/: error.rs  lib.rs  metric_point.rs  portability.rs  ports.rs  profile.rs  progress_timeline.rs  records.rs  spectrogram.rs  statistics_key.rs  strategy.rs  timeline.rs  training_discipline.rs  training_discipline_statistics.rs  training_mode.rs  training_mode_statistics.rs  trend.rs  tuning.rs  welford.rs
domain/src/session/: comparison_session.rs  continuous_rhythm_matching_session.rs  mod.rs  pitch_comparison_session.rs  pitch_discrimination_session.rs  pitch_matching_session.rs  rhythm_offset_detection_session.rs
domain/src/training/: comparison.rs  continuous_rhythm_matching.rs  mod.rs  pitch_comparison.rs  pitch_discrimination.rs  pitch_matching.rs  rhythm_offset_detection.rs
domain/src/types/: amplitude.rs  cents.rs  detuned.rs  duration.rs  frequency.rs  interval.rs  midi.rs  mod.rs  note_range.rs  rhythm_direction.rs  rhythm_offset.rs  sound_source.rs  step_position.rs  tempo.rs  tempo_range.rs
domain/tests/: profile_hydration.rs  strategy_convergence.rs  tuning_accuracy.rs
synth-worklet/: Cargo.toml
web/: Cargo.toml
web/assets/soundfont/: synth-processor.js
web/locales/: languages.json
web/locales/de/: main.ftl
web/locales/en/: main.ftl
web/src/: app.rs  bridge.rs  help_sections.rs  interval_codes.rs  main.rs
web/src/adapters/: audio_context.rs  audio_latency.rs  audio_oscillator.rs  audio_soundfont.rs  csv_export_import.rs  data_portability.rs  data_portability_service.rs  default_settings.rs  indexeddb_store.rs  localstorage_settings.rs  midi_input.rs  mod.rs  note_player.rs  rhythm_scheduler.rs  sound_preview.rs
web/src/components/: audio_gate_overlay.rs  comparison_view.rs  continuous_rhythm_matching_view.rs  help_content.rs  info_view.rs  mod.rs  nav_bar.rs  page_nav.rs  pitch_comparison_view.rs  pitch_discrimination_view.rs  pitch_matching_view.rs  pitch_slider.rs  profile_preview.rs  profile_view.rs  profile_visualization.rs  progress_card.rs  progress_chart.rs  progress_sparkline.rs  rhythm_offset_detection_view.rs  rhythm_placeholder_view.rs  rhythm_spectrogram_chart.rs  settings_view.rs  start_page.rs  training_stats.rs
(+22 files in other folders)
