[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "AudioScheduledSourceNode",
    "BaseAudioContext",
    "GainNode",
    "OscillatorNode",
    "OscillatorType",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
