[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain", features = ["training-log"] }
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
send_wrapper = "0.6"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioContextState",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "AudioScheduledSourceNode",
    "BaseAudioContext",
    "Document",
    "DomException",
    "DomRect",
    "DomStringList",
    "Element",
    "EventTarget",
    "GainNode",
    "HtmlElement",
    "IdbCursor",
    "IdbCursorDirection",
    "IdbCursorWithValue",
    "IdbDatabase",
    "IdbFactory",
    "IdbIndex",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "KeyboardEvent",
    "MouseEvent",
    "OscillatorNode",
    "OscillatorType",
    "PointerEvent",
    "Storage",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
